# Wormhole

./: .dockerignore  .editorconfig  .env  .env.example  .eslintignore  .eslintrc  .eslintrc.cjs  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .licensure.yml  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  biome.json  bump.py  diesel.toml  eslint.config.js  justfile  loadenv.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  svelte.config.js  tauri.conf.json  tauri.conf.json.in  tauriw  (+2 more)
apps/bindings/: Cargo.toml
apps/bindings/src/: lib.rs  main.rs
apps/cli/: CLI.md  Cargo.toml
apps/cli/src/: auth.rs  cli.rs  lib.rs  main.rs
apps/cli/src/cli/: mod.rs  pack.rs
apps/gui/: .gitignore  Cargo.toml  build.rs  conf.rs  genconf.ps1  genconf.sh  tauri.conf.json.in
apps/gui/crash-reports/: crash-2024-05-23_20.05.22.5237-quilt_loader.txt  crash-2024-05-23_20.07.03.3658-quilt_loader.txt
apps/gui/src/: export.rs  installer.rs  lib.rs  log.rs  macros.rs  main.rs  run.rs
apps/gui/src/cmd/: base.rs  instance.rs  loader.rs  mod.rs  mods.rs  plugin.rs
apps/webui/: Cargo.toml  build.rs
apps/webui/src/: cli.rs  code.rs  glue.rs  lib.rs  log.rs  main.rs  route.rs  router.rs  server.rs  state.rs  ws.rs
apps/wormhole/: Cargo.toml
apps/wormhole/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: auth.rs  cli.rs  main.rs
cli/src/commands/: mod.rs
cli/src/commands/ckan/: install.rs  mod.rs
cli/src/commands/curseforge/: mod.rs
cli/src/commands/instance/: mod.rs
cli/src/commands/mods/: install.rs  mod.rs
common/: Cargo.toml
common/src/: downloader.rs  github.rs  lib.rs  releases.rs  util.rs
common/src/boot/: cache.rs  integrity.rs  mod.rs
common/src/ckan/: mod.rs  query.rs
common/src/finder/: mod.rs  pdlauncher.rs  steam.rs
common/src/finder/resolver/: linux.rs  macos.rs  windows.rs
common/src/installer/: bepinex.rs  mod.rs  mods.rs  spacedock.rs  spacewarp.rs
common/src/instances/: constants.rs  game.rs  instance.rs  json.rs  mod.rs  mods.rs
common/src/models/: download.rs  latest.rs  mod.rs  release.rs
common/src/mods/: mod.rs
common/src/mods/schema/: browse.rs  mod.rs
common/src/mods/spacedock/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  load.rs  loader.rs  macros.rs  main.rs  plugin.rs  register.rs  res.rs  seed.rs  tauri.rs  test_util.rs  unity.rs
crates/api/src/install/: install.rs  mod.rs  progress.rs  uninstall.rs
crates/api/src/plugins/: ksp1.rs  ksp2.rs  minecraft.rs  mod.rs
crates/axumite/: Cargo.toml
crates/axumite/src/: fail.rs  lib.rs  rejection.rs  socket.rs  upgrade.rs  util.rs
crates/commands/: Cargo.toml
crates/commands/src/: base.rs  instance.rs  lib.rs  loader.rs  macros.rs  mods.rs  plugin.rs  router.rs
crates/commands/src/mutation/: mod.rs
crates/commands/src/query/: mod.rs
crates/commands/src/subscriptions/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: downloader.rs  lib.rs  releases.rs
crates/common/src/boot/: cache.rs
crates/common/src/ckan/: mod.rs  query.rs
crates/common/src/installer/: bepinex.rs  mods.rs  spacedock.rs  spacewarp.rs
crates/common/src/instances/: constants.rs  game.rs  mods.rs
crates/common/src/models/: release.rs
crates/data/: Cargo.toml
crates/data/src/: conv.rs  game.rs  instance.rs  lib.rs  macros.rs  migrate.rs  mod_.rs  prisma.rs  schema.rs  seeder.rs  source.rs  sources.rs
crates/example-plugin/: Cargo.toml
crates/example-plugin/src/: lib.rs
crates/init/: Cargo.toml
crates/init/src/: db.rs  lib.rs
crates/install/: Cargo.toml  README.md
crates/install/src/: extract.rs  lib.rs  magic.rs
crates/java/: Cargo.toml
crates/java/src/: install.rs  lib.rs
crates/mcmeta/: .gitignore  Cargo.toml  README.md
crates/mcmeta/src/: README.md  download.rs  jar_mf.rs  lib.rs  macros.rs  test_util.rs  tests.rs  util.rs
crates/mcmeta/src/cmd/: args.rs  cmd.rs  mod.rs  modded.rs  options.rs  tests.rs  vanilla.rs
crates/mcmeta/src/fabric/: meta.rs  mod.rs  tests.rs
crates/mcmeta/src/forge/: extract.rs  install.rs  mappings.rs  mod.rs  processor.rs  tests.rs  util.rs
crates/mcmeta/src/installer/: libs.rs  manifest.rs  mod.rs
crates/mcmeta/src/launchwrapper/: args.rs  config.rs  libs.rs  main_class.rs  mod.rs  tweakers.rs
crates/mcmeta/src/loader/: mod.rs
crates/mcmeta/src/manager/: dirs.rs  launch.rs  mod.rs
crates/mcmeta/src/mappings/: macros.rs  mod.rs  util.rs
crates/mcmeta/src/maven/: artifact.rs  coord.rs  metadata.rs  mod.rs
crates/mcmeta/src/neoforge/: extract.rs  install.rs  meta.rs  mod.rs  profile.rs  tests.rs  util.rs  version.rs
crates/msa/: Cargo.toml  build.rs  note.md
crates/msa/src/: flow.rs  lib.rs  main.rs  mc.rs  microsoft.rs  msa_token.rs  profile.rs  state.rs  verify.rs  xbox.rs  xsts.rs
crates/pack/: Cargo.toml
crates/pack/src/: lib.rs  macros.rs
crates/plugins/: Cargo.toml
crates/plugins/ksp1/: Cargo.toml
crates/plugins/ksp2/: Cargo.toml
crates/plugins/minecraft/: Cargo.toml
crates/plugins/src/: ext.rs  ksp1.rs  ksp2.rs  lib.rs  macros.rs  minecraft.rs  unity.rs
crates/query/: Cargo.toml  build.rs
crates/query/src/: conv.rs  impls.rs  lib.rs  macros.rs  mod_.rs  modrinth.rs  source.rs
crates/rpc-rs/: Cargo.toml  README.md
crates/rpc-rs-macros/: Cargo.toml
crates/rpc-rs-macros/src/: lib.rs
crates/rpc-rs/pkg/: index.ts  package.json  pnpm-lock.yaml
crates/rpc-rs/src/: filtered.rs  lib.rs  macros.rs  util.rs
gui/: Cargo.toml  tauri.conf.json
gui/src/: installer.rs  main.rs  progress.rs
gui/src/installer/: bepinex.rs  bepinex_loader.rs  mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  main.rs  releases.rs
src-tauri/src/finder/: mod.rs  pdlauncher.rs  steam.rs
src-tauri/src/installer/: bepinex.rs  bepinex_loader.rs  doorstop.rs  mod.rs  mods.rs
src-tauri/src/instances/: mod.rs
src-tauri/src/models/: latest.rs  mod.rs  release.rs
src-tauri/src/mods/: mod.rs
(+377 files in other folders)
