[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/Wormhole"
homepage = "https://github.com/RedstoneWizard08/Wormhole"
authors = ["RedstoneWizard08", "Rexicon226", "cheese3660", "Wormhole Contributors"]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
tauri = { version = "1.6.6", features = ["api-all"] }
zip-extensions = "0.6.2"
keyvalues-parser = "0.2.0"
reqwest = { version = "0.12.4", features = ["json", "stream", "gzip"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["tokio-util", "fs", "net", "sync"] }
tauri-build = "1.5.2"
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rand = "0.8.5"
zip = "1.3.0"
async-trait = "0.1.80"
lazy_static = "1.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
libloading = "0.8.3"
const_format = "0.2.32"
phf = { version = "0.11.2", features = ["macros"] }
flate2 = "1.0.30"
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
dirs = "5.0.1"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter", "json", "chrono", "serde"] }
cfg-if = "1.0.0"
tar = "0.4.40"
xz = "0.1.0"
walkdir = "2.5.0"
base64 = "0.22.1"
ferinth = "2.11.0"
furse = "1.5.14"
tempfile = "3.10.1"
specta = { version = "=2.0.0-rc.7", features = ["functions", "tauri", "serde"] }
futures = { version = "0.3.30", features = ["executor"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
mime_guess = "2.0.4"
once_cell = "1.19.0"
regex = "1.10.4"
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
url = "2.5.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
include_dir = "0.7.3"
axum-core = "0.4.3"
bytes = "1.6.0"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
hyper = "1.3.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }
sha-1 = "0.10.1"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.1"
derive_builder = "0.20.0"
tracing-appender = "0.2.3"
log = "0.4.21"
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
diesel_migrations = "2.1.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full"] }
proc-macro2 = "1.0.83"
dotenvy = "0.15.7"
tiny_http = "0.12.0"
open = "5.1.3"
envcrypt = "0.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
serde_either = "0.2.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serial_test = "3.1.1"
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
proguard = "5.4.1"
which = "6.0.1"
sysinfo = "0.30.12"
crossbeam = "0.8.4"
parking_lot = "0.12.2"
libc = "0.2.155"
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_Foundation"] }
thiserror = "1.0.61"
murmur2 = "0.1.0"
serde_repr = "0.1.19"
crossbeam-channel = "0.5.13"

tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", features = ["typescript"] }
tungstenite = { features = ["rustls"], git = "https://github.com/snapview/tungstenite-rs", version = "0.20.1", rev = "fc17f73" }

wormhole-cli = { path = "./apps/cli" }
wormhole-gui = { path = "./apps/gui" }

anyhow = { path = "./external/anyhow" }
ckandex = { path = "./external/ckandex/ckandex" }
rar = { path = "./external/rar" }

api = { path = "./crates/api" }
auth = { path = "./crates/auth" }
query = { path = "./crates/query" }
data = { path = "./crates/data" }
whcore = { path = "./crates/core" }
init = { path = "./crates/init" }
install = { path = "./crates/install" }
axumite = { path = "./crates/axumite" }
glue = { path = "./crates/glue" }
midlog = { path = "./crates/midlog" }
java = { path = "./crates/java" }
macros = { path = "./crates/macros" }
msa = { path = "./crates/msa" }
mcmeta = { path = "./crates/mcmeta" }

[workspace]
resolver = "2"

members = [
    "apps/cli",
    "apps/gui",
    "apps/bindings",
    "apps/webui",
    "crates/api",
    "crates/query",
    "crates/data",
    "crates/core",
    "crates/init",
    "crates/install",
    "crates/auth",
    "crates/axumite",
    "crates/glue",
    "external/anyhow",
    "external/rar", "crates/midlog", "crates/macros", "crates/macro-test", "crates/msa", "crates/java", "crates/mcmeta",
]
