[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/Wormhole"
homepage = "https://github.com/RedstoneWizard08/Wormhole"
authors = [
    "RedstoneWizard08",
    "Rexicon226",
    "cheese3660",
    "Wormhole Contributors",
]

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
tauri = { version = "1.7.1", features = ["api-all"] }
keyvalues-parser = "0.2.0"
reqwest = { version = "0.12.5", features = [
    "json",
    "stream",
    "gzip",
    "rustls-tls",
], default-features = false }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15", features = [
    "tokio-util",
    "fs",
    "net",
    "sync",
] }
tauri-build = "1.5.3"
clap = { version = "4.5.9", features = ["derive", "env", "string"] }
rand = "0.8.5"
zip = "2.1.3"
async-trait = "0.1.81"
lazy_static = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
libloading = "0.8.4"
const_format = "0.2.32"
flate2 = "1.0.30"
dirs = "5.0.1"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "env-filter",
    "json",
    "chrono",
    "serde",
] }
cfg-if = "1.0.0"
tar = "0.4.41"
xz = "0.1.0"
walkdir = "2.5.0"
base64 = "0.22.1"
ferinth = "2.11.0"
tempfile = "3.10.1"
specta = { version = "2.0.0-rc.13", features = [
    "function",
    "typescript",
    "export",
] }
futures = { version = "0.3.30", features = ["executor"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
mime_guess = "2.0.5"
once_cell = "1.19.0"
regex = "1.10.5"
tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
url = "2.5.2"
ctrlc = { version = "3.4.4", features = ["termination"] }
include_dir = "0.7.4"
axum-core = "0.4.3"
bytes = "1.6.0"
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["tokio"] }
sha-1 = "0.10.1"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
derive_builder = "0.20.0"
tracing-appender = "0.2.3"
log = "0.4.22"
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
quote = "1.0.36"
syn = { version = "2.0.70", features = ["full"] }
proc-macro2 = "1.0.86"
dotenvy = "0.15.7"
tiny_http = "0.12.0"
open = "5.2.0"
envcrypt = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_either = "0.2.1"
quick-xml = { version = "0.36.0", features = ["serialize", "serde-types"] }
which = "6.0.1"
sysinfo = "0.30.13"
libc = "0.2.155"
thiserror = "1.0.61"
murmur2 = "0.1.0"
serde_repr = "0.1.19"
serde_derive = "1.0.209"
tungstenite = { features = [
    "rustls",
], git = "https://github.com/snapview/tungstenite-rs", version = "0.20.1", rev = "fc17f73" }
convert_case = "0.6.0"
diagnostics = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
dmmf = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
psl = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
schema-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
user-facing-errors = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
prisma-client-rust = { path = "./external/prisma-client-rust/crates/lib", features = [
    "specta",
    "sqlite",
] }

wormhole-cli = { path = "./apps/cli" }
wormhole-gui = { path = "./apps/gui" }

anyhow = { path = "./external/anyhow" }
ckandex = { path = "./external/ckandex/ckandex" }

api = { path = "./crates/api" }
auth = { path = "./crates/auth" }
query = { path = "./crates/query" }
data = { path = "./crates/data" }
whcore = { path = "./crates/core" }
init = { path = "./crates/init" }
install = { path = "./crates/install" }
axumite = { path = "./crates/axumite" }
glue = { path = "./crates/glue" }
midlog = { path = "./crates/midlog" }
java = { path = "./crates/java" }
msa = { path = "./crates/msa" }
mcmeta = { path = "./crates/mcmeta" }
webui = { path = "./apps/webui" }
bindings = { path = "./apps/bindings" }
commands = { path = "./crates/commands" }
plugins = { path = "./crates/plugins" }
rpc-rs = { path = "./crates/rpc-rs", features = ["axum", "tauri", "prisma"] }
rpc-rs-macros = { path = "./crates/rpc-rs-macros" }

[workspace]
resolver = "2"

members = [
    "apps/cli",
    "apps/gui",
    "apps/bindings",
    "apps/webui",
    "crates/api",
    "crates/query",
    "crates/data",
    "crates/core",
    "crates/init",
    "crates/install",
    "crates/auth",
    "crates/axumite",
    "crates/glue",
    "external/anyhow",
    "crates/midlog",
    "crates/msa",
    "crates/java",
    "crates/mcmeta",
    "apps/wormhole",
    "crates/commands",
    "crates/plugins",
    "crates/pack",
    "crates/rpc-rs",
    "external/prisma-client-rust/crates/lib",
    "external/prisma-client-rust/crates/cli",
    "external/prisma-client-rust/crates/generator",
    "external/prisma-client-rust/crates/generator-macros",
    "external/prisma-client-rust/crates/generator-shared",
    "external/prisma-client-rust/crates/sdk",
    "external/prisma-client-rust/prisma-cli", "crates/rpc-rs-macros",
]
