[package]
name = "wormhole-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip-extensions = "0.6.1"
keyvalues-parser = "0.1.0"
ckandex = "0.4.2"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["stream", "gzip"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["tokio-util", "fs", "net", "sync"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rand = "0.8.5"
