[package]
name = "wormhole-common"
version = "0.3.1"
edition = "2021"
description = "Common code for the Wormhole mod manager project."
license = "MIT"
repository = "https://github.com/RedstoneWizard08/Wormhole"
homepage = "https://github.com/RedstoneWizard08/Wormhole"
readme = "../README.md"
authors = ["RedstoneWizard08", "Rexicon226", "cheese3660", "Wormhole Contributors"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
keyvalues-parser = "0.1.0"
ckandex = "0.4.2"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["stream", "gzip"] }
tokio-stream = { version = "0.1.12", features = ["tokio-util", "fs", "net", "sync"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rand = "0.8.5"
zip = "0.6.4"
