[package]
name = "wormhole-gui"
version = "0.2.0"
edition = "2021"
description = "An installer for the SpaceWarp mod Lloader."
license = "MIT"
repository = "https://github.com/SpaceWarpDev/Space-Warp-Installer"
homepage = "https://github.com/RedstoneWizard08/Wormhole"
readme = "../README.md"
authors = ["RedstoneWizard08", "Rexicon226", "cheese3660", "Wormhole Contributors"]

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
zip-extensions = "0.6.1"
keyvalues-parser = "0.1.0"
ckandex = "0.4.2"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["stream", "gzip"] }
tokio-util = { version = "0.7.7", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["tokio-util", "fs", "net", "sync"] }
wormhole-common = { path = "../common", version = "0.2.0" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
