[package]
name = "wormhole"
version = "0.0.0"
description = "An installer for the SpaceWarp mod Lloader."
authors = ["SpaceWarpDev"]
license = "MIT"
repository = "https://github.com/SpaceWarpDev/Space-Warp-Installer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
reqwest = { version = "0.11.5", features = ["json"] }
zip-extensions = "0.6.1"
keyvalues-parser = "0.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
