[package]
name = "wormhole-cli"
description = "The Wormhole CLI."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ckandex.workspace = true
clap.workspace = true
tokio.workspace = true
wormhole-common = { workspace = true, features = ["clap"] }
