[package]
name = "wormhole-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "wh"
path = "./src/main.rs"

[dependencies]
ckandex.workspace = true
clap.workspace = true
tokio.workspace = true
query.workspace = true
init.workspace = true
data.workspace = true
api.workspace = true
auth.workspace = true
whcore.workspace = true
install.workspace = true
anyhow.workspace = true
