[package]
name = "wormhole-gui"
description = "An installer for the SpaceWarp mod Lloader."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build.workspace = true
const_format.workspace = true
anyhow.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri.workspace = true
zip-extensions.workspace = true
keyvalues-parser.workspace = true
ckandex.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
wormhole-common.workspace = true
query.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
