# MIT License
#
# Copyright (c) 2024 Jacob Sapoznikow <jacob1coder@gmail.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. 

[package]
name = "wormhole-gui"
description = "An installer for the SpaceWarp mod Lloader."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build.workspace = true
const_format.workspace = true
anyhow.workspace = true

[dev-dependencies]
const_format.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri.workspace = true
zip-extensions.workspace = true
keyvalues-parser.workspace = true
ckandex.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
query.workspace = true
init.workspace = true
data.workspace = true
api.workspace = true
auth.workspace = true
whcore.workspace = true
install.workspace = true
anyhow.workspace = true
specta.workspace = true
tauri-specta.workspace = true
futures.workspace = true
macros.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
