[package]
name = "webui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["axum"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
glue.workspace = true
init.workspace = true
data.workspace = true
clap.workspace = true
log.workspace = true
midlog.workspace = true
clap-verbosity-flag.workspace = true
lazy_static.workspace = true
whcore.workspace = true
tauri.workspace = true
api.workspace = true
http-body-util.workspace = true
uuid.workspace = true
tungstenite.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
axumite.workspace = true
commands.workspace = true
