[package]
name = "wormhole"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
webui.workspace = true
wormhole-gui.workspace = true
wormhole-cli.workspace = true
clap.workspace = true
whcore.workspace = true
bindings.workspace = true
anyhow.workspace = true
tokio.workspace = true
dotenvy.workspace = true
