[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whcore.workspace = true
lazy_static.workspace = true
query.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasi-common.workspace = true
wasi-experimental-http-wasmtime.workspace = true
