[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whcore.workspace = true
lazy_static.workspace = true
query.workspace = true
anyhow.workspace = true
base64.workspace = true
async-trait.workspace = true
