[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whcore.workspace = true
lazy_static.workspace = true
query.workspace = true
anyhow.workspace = true
base64.workspace = true
async-trait.workspace = true
serde.workspace = true
specta.workspace = true
data.workspace = true
tauri.workspace = true
tauri-specta.workspace = true
const_format.workspace = true
serde_json.workspace = true
mcmeta.workspace = true
msa.workspace = true
tokio.workspace = true
java.workspace = true
macros.workspace = true
tracing.workspace = true
install.workspace = true
tempfile.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
indicatif.workspace = true
