[package]
name = "axumite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
axum-core.workspace = true
futures-util.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
tokio-tungstenite.workspace = true
async-trait.workspace = true
sha-1.workspace = true
bytes.workspace = true
base64.workspace = true
tokio.workspace = true
