[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri.workspace = true
keyvalues-parser.workspace = true
ckandex.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
query.workspace = true
init.workspace = true
data.workspace = true
api.workspace = true
whcore.workspace = true
install.workspace = true
anyhow.workspace = true
specta.workspace = true
futures.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
log.workspace = true
mcmeta.workspace = true
midlog.workspace = true
prisma-client-rust.workspace = true
rpc-rs.workspace = true
