[package]
name = "wormhole-common"
description = "Common code for the Wormhole mod manager project."
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
clap = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
keyvalues-parser.workspace = true
ckandex.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
rusqlite.workspace = true
rand.workspace = true
zip.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
chrono.workspace = true
