[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
diesel.workspace = true
libsqlite3-sys.workspace = true
async-trait.workspace = true
serde.workspace = true
specta.workspace = true
diesel_migrations.workspace = true
