[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
specta.workspace = true
prisma-client-rust.workspace = true
tokio.workspace = true
