[package]
name = "init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
whcore.workspace = true
data.workspace = true
api.workspace = true
msa.workspace = true
tokio.workspace = true
plugins.workspace = true
