[package]
name = "install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
zip.workspace = true
instance.workspace = true
reqwest.workspace = true
flate2.workspace = true
rar.workspace = true
tar.workspace = true
xz.workspace = true
whcore.workspace = true
walkdir.workspace = true
