[package]
name = "install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
api.workspace = true
anyhow.workspace = true
zip.workspace = true
reqwest.workspace = true
flate2.workspace = true
rar.workspace = true
tar.workspace = true
xz.workspace = true
whcore.workspace = true
walkdir.workspace = true
query.workspace = true
tempfile.workspace = true
data.workspace = true
diesel.workspace = true
