[package]
name = "install"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
xz.workspace = true
whcore.workspace = true
walkdir.workspace = true
data.workspace = true
