[package]
name = "msa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tiny_http.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
open.workspace = true
rand.workspace = true
envcrypt.workspace = true
once_cell.workspace = true
tracing.workspace = true
whcore.workspace = true

[build-dependencies]
dotenvy.workspace = true
