[package]
name = "pack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
specta.workspace = true
whcore.workspace = true
clap.workspace = true
nom.workspace = true
anyhow.workspace = true
byteorder.workspace = true
flate2.workspace = true
ignore.workspace = true
sha1.workspace = true
toml.workspace = true
hex.workspace = true
