[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
api.workspace = true
base64.workspace = true
whcore.workspace = true
query.workspace = true
mcmeta.workspace = true
data.workspace = true
anyhow.workspace = true
msa.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
const_format.workspace = true
