[package]
name = "query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
async-trait.workspace = true
serde.workspace = true
const_format.workspace = true
reqwest.workspace = true
serde_json.workspace = true
ckandex.workspace = true
diesel.workspace = true
libsqlite3-sys.workspace = true
tracing.workspace = true
tokio.workspace = true
whcore.workspace = true
data.workspace = true
ferinth.workspace = true
specta.workspace = true
envcrypt.workspace = true
once_cell.workspace = true
thiserror.workspace = true
murmur2.workspace = true
serde_repr.workspace = true
url.workspace = true
chrono.workspace = true
mcmeta.workspace = true

[build-dependencies]
dotenvy.workspace = true
